start/stop added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- a simple monster game using vue.js
+author : furkan
+date: january 5 2019 -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
