--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ date: january 5 2019 -->
       <section class="row">
         <div class="small-6-columns">
           <h1 class="text-center">YOU</h1>
-          <div class="healthbar">
+          <div class="healthbar" v-bind:style="{width: player_health+'%'}">
             <div v-show="playing" class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
               {{player_health}}
             </div>
@@ -25,7 +25,7 @@ date: january 5 2019 -->
 
         <div class="small-6-columns">
           <h1 class="text-center">MONSTER</h1>
-          <div class="healthbar">
+          <div class="healthbar" v-bind:style="{width: monster_health+'%'}">
             <div v-show="playing" class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
               {{monster_health}}
             </div>
@@ -41,9 +41,9 @@ date: january 5 2019 -->
 
       <section v-show="playing" class="row controls">
         <div class="small-12 columns">
-          <button id="attack">ATTACK</button>
+          <button v-on:click="attack()" id="attack">ATTACK</button>
           <button id="special-attack">SPECIAL ATTACK</button>
-          <button id="heal">HEAL</button>
+          <button v-on:click="heal()" id="heal">HEAL</button>
           <button v-on:click="give_up()" id="give-up">GIVE UP</button>
         </div>
       </section>
@@ -87,6 +87,15 @@ date: january 5 2019 -->
             alert("Try again :)");
             this.playing = false;
           }
+        },
+
+        attack: function(){
+          this.monster_health -= Math.floor((Math.random()*20)+1);
+          this.player_health -= Math.floor((Math.random()*20)+1);
+        },
+
+        heal: function(){
+          this.player_health += Math.floor((Math.random()*10)+1);
         }
       }
     });
