--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@ date: january 5 2019 -->
       </div>
     </section>
 
-    <section class="row log">
+    <section v-show="playing" class="row log">
       <div class="small-12 columns">
-        <ul>
-          <li> </li>
+        <ul class="log">
+          <li v-for="entry in log"> {{ entry }} </li>
         </ul>
-
       </div>
-
     </section>
 
   </div>
@@ -69,13 +67,16 @@ date: january 5 2019 -->
       data: {
         playing: false,
         player_health: 100,
-        monster_health: 100
+        monster_health: 100,
+        log: [] //to display log entries
       },
+
       methods: {
         start: function() {
           if (this.playing) {
             alert("Can't Quit !");
           } else {
+            this.log = [];
             this.playing = true;
             this.player_health = 100;
             this.monster_health = 100;
@@ -85,36 +86,48 @@ date: january 5 2019 -->
         give_up: function() {
           if (confirm("Are you sure ?")) {
             this.playing = false;
+            this.log = [];
             this.player_health = 100;
             this.monster_health = 100;
           }
         },
 
         attack: function() {
-          this.monster_health -= Math.floor((Math.random() * 20) + 1);
-          this.player_health -= Math.floor((Math.random() * 20) + 1);
+          let player_damage = Math.floor((Math.random() * 20) + 1);
+          let monster_damage = Math.floor((Math.random() * 20) + 1);
+          this.monster_health -= player_damage;
+          this.player_health -= monster_damage;
+          this.log.unshift('player hits monster for ' + player_damage);
+          this.log.unshift('monster hits player for ' + monster_damage);
           this.watch_win();
         },
 
         heal: function() {
           if (this.player_health < 100) {
-            this.player_health += Math.floor((Math.random() * 10) + 1);
+            let heal = Math.floor((Math.random() * 10) + 1);
+            this.player_health += heal;
+            this.log.unshift('player healed for ' + heal);
           }
           if (this.player_health >= 100) {
             this.player_health = 100;
           }
-
         },
 
         special_attack: function() {
-          this.monster_health -= Math.floor((Math.random() * 30) + 1);
-          this.player_health -= Math.floor((Math.random() * 15) + 1);
+          let player_damage = Math.floor((Math.random() * 30) + 1);
+          let monster_damage = Math.floor((Math.random() * 15) + 1);
+          this.monster_health -= player_damage;
+          this.player_health -= monster_damage;
+          this.log.unshift('player hits monster for' + player_damage);
+          this.log.unshift('monster hits player for' + monster_damage);
           this.watch_win();
         },
 
+        //checking winning conditions
         watch_win: function() {
           if (this.player_health <= 0) {
             if (confirm("You lost. Want to play again?")) {
+              this.playing = false;
               this.start();
             } else {
               this.give_up();
