--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@ date: january 5 2019 -->
 
         heal: function() {
           if (this.player_health < 100) {
+            let damage = Math.floor((Math.random() * 10) + 1);
             let heal = Math.floor((Math.random() * 10) + 1);
             this.player_health += heal;
+            this.player_health -= damage;
             this.log.unshift('player healed for ' + heal);
+            this.log.unshift('monster hits player for ' + damage);
           }
           if (this.player_health >= 100) {
             this.player_health = 100;
