--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ date: january 5 2019 -->
 
   <div id="app">
     <section class="row">
-      <div class="small-6-columns">
+      <div class="small-6 columns">
         <h1 class="text-center">YOU</h1>
         <div class="healthbar" v-bind:style="{width: player_health+'%'}">
           <div v-show="playing" class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
@@ -25,7 +25,7 @@ date: january 5 2019 -->
         </div>
       </div>
 
-      <div class="small-6-columns">
+      <div class="small-6 columns">
         <h1 class="text-center">MONSTER</h1>
         <div class="healthbar" v-bind:style="{width: monster_health+'%'}">
           <div v-show="playing" class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
